--- a/src/main/resources/templates/postNotFind.html
+++ b/src/main/resources/templates/postNotFind.html
@@ -6,6 +6,6 @@
     <link href="../static/css/bootstrapp-css" rel="stylesheet" th:href="@{/css/bootstrap.css}">
 </head>
 <body>
-<h1>TODO ESTA MAS QUE BIEN</h1>
+<h1>ERROR</h1>
 </body>
 </html>
