--- a/src/main/resources/templates/formCreation.html
+++ b/src/main/resources/templates/formCreation.html
@@ -35,8 +35,16 @@
         <div class="form-group">
 
             <label for="category">Categoria:</label>
+            <select class="form-control" id="category" th:field="*{category}" name="category">
+                <option value="" selected>Sin categoria</option>
+                <option value="cine" >Cine</option>
+                <option value="cocina">Cocina</option>
+                <option value="programacion">Programacion</option>
+                <option value="Video Juegos">Video Juegos</option>
+            </select>
+            <!--
             <input type="text"	class="form-control" id="category" th:field="*{category}" name="category">
-
+            -->
         </div>
 
         <div class="form-group">
@@ -50,9 +58,8 @@
 
     </form>
 
-<!--
-    <a href="/listaAnimal" class="btn btn-primary">Atras</a>
--->
+<a class="btn btn-secondary" th:href="@{/get/posts}">ATRAS</a>
+
 </div>
 
 </body>
